Create a role management interface with a paginated table